release new ai-scheduler version